--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-constants": "^14.4.2",
+    "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-icons": "^4.12.0",
     "react-native": "0.72.6",
+    "react-native-date-picker": "^4.3.4",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
