--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-picker/picker": "^2.6.1",
@@ -17,6 +18,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.15",
     "expo-constants": "^14.4.2",
     "expo-location": "^16.3.0",
