--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "^14.4.2",
     "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-icons": "^4.12.0",
     "react-native": "0.72.6",
