--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.15",
     "expo-constants": "^14.4.2",
+    "expo-image-picker": "^14.5.0",
     "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
@@ -31,6 +32,8 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.1",
+    "react-native-google-mobile-ads": "^12.8.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
