--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -19,12 +20,16 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
-    "expo": "~49.0.15",
+    "expo": "^49.0.21",
+    "expo-checkbox": "^2.5.0",
     "expo-constants": "^14.4.2",
+    "expo-image-manipulator": "^11.5.0",
     "expo-image-picker": "^14.5.0",
     "expo-location": "^16.3.0",
+    "expo-mail-composer": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-icons": "^4.12.0",
     "react-native": "0.72.6",
