--- a/app.json
+++ b/app.json
@@ -34,6 +34,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "cbcac521-8b45-4cb1-9415-4411a7cae6b3"
+      }
     }
   },
   "eas": {
