--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/geolocation": "^3.1.0",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "expo": "^49.0.21",
-    "expo-checkbox": "^2.5.0",
+    "expo-checkbox": "~2.4.0",
     "expo-constants": "^14.4.2",
-    "expo-image-manipulator": "^11.5.0",
-    "expo-image-picker": "^14.5.0",
-    "expo-location": "^16.3.0",
-    "expo-mail-composer": "^12.5.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-mail-composer": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "install": "^0.13.0",
@@ -37,11 +37,10 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.1",
-    "react-native-google-mobile-ads": "^12.8.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-maps": "1.7.1",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.0"
   },
